<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/mainToolbar"
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tugas1"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

                <Button
                    android:id="@+id/btnMainOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button1"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/btnMainTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button2"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/btnMainThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button3"
                    android:layout_margin="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tugas2"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

                <Button
                    android:id="@+id/btnMainDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/datepicker"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/btnMainTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timepicker"
                    android:layout_margin="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>